``fix:`` :bug: fixed spacing error

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -750,6 +750,10 @@ video {
   margin-bottom: 70px;
 }
 
+.mb-\[80px\] {
+  margin-bottom: 80px;
+}
+
 .mt-0 {
   margin-top: 0px;
 }
@@ -770,12 +774,20 @@ video {
   margin-top: 100px;
 }
 
+.mt-\[40px\] {
+  margin-top: 40px;
+}
+
 .mt-\[60px\] {
   margin-top: 60px;
 }
 
 .mt-\[70px\] {
   margin-top: 70px;
+}
+
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 
 .box-border {
@@ -908,6 +920,18 @@ video {
   height: 100%;
 }
 
+.h-6 {
+  height: 1.5rem;
+}
+
+.h-7 {
+  height: 1.75rem;
+}
+
+.h-9 {
+  height: 2.25rem;
+}
+
 .w-1\/2 {
   width: 50%;
 }
@@ -947,6 +971,10 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-9 {
+  width: 2.25rem;
 }
 
 .flex-shrink {
@@ -2841,6 +2869,20 @@ h2 {
 }
 
 @media (min-width: 640px) {
+  .sm\:my-0 {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
+  .sm\:my-10 {
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
+  }
+
+  .sm\:mb-10 {
+    margin-bottom: 2.5rem;
+  }
+
   .sm\:flex {
     display: flex;
   }
